[package]
name = "charmguard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5", features=["derive"]}
chrono = "0.4"
colored = "2"
sysinfo = {version = "0.29.10"}
serde = { version="1.0", features=["derive"]}
serde_yaml = "0.9"
serde_json="1.0"
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging"]}
widestring = "1.0"
actix-web = "4"
reqwest = "0.11"
tokio = {version = "1", features = ["rt-multi-thread","macros"]}

[[bin]]
name="charmguard-api"
path="src/api.rs"